Correct layout alignment

--- a/Profile Card/style.css
+++ b/Profile Card/style.css
@@ -1,30 +1,28 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-size: 18px;
     font-family: 'Kumbh Sans', sans-serif;
     font-weight: 400;
     color: hsl(0, 0%, 59%);
-    box-sizing: content-box;
-    margin-top: 10%;
-    background: url("images/bg-pattern-top.svg") no-repeat, 
-                url("images/bg-pattern-bottom.svg") no-repeat,
-                #19a1ad;
-   
-    max-width: 1440px;
-    background-position: top -200px left -200px,
-                         bottom -100px right -100px;
-}
-
-strong {
-    font-weight: 700;
-    color: hsl(229, 23%, 23%);
+    background: url('images/bg-pattern-top.svg') no-repeat, url('images/bg-pattern-bottom.svg') no-repeat, #19a1ad;
+    margin-right: auto;
+    margin-left: auto;
+    background-clip: border-box;
+    background-size: cover, cover;
+    max-width: 350px;
 }
 
 /* Profile Card*/
 #card {
-    background: white url("images/bg-pattern-card.svg") no-repeat;
-    width: 350px;
+    background: white url("images/bg-pattern-card.svg") no-repeat top center;
+    background-size: auto;
+    width: 326px;
+    min-width: 325px;
     height: auto;
-    border-radius: 10px;
+    border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
     margin-left: auto;
     margin-right: auto;
@@ -33,33 +31,48 @@ strong {
     align-items: center;
     text-align: center;
     padding-bottom: 10px;
-    max-width: fit-content;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
 }
 
 /* User Profile Info*/
-#user-profile {
-    margin-bottom: 12px;
-    width: 100%;
-    border-bottom: 2px solid #e8e8e8;
-    padding-bottom: 15px;
-}
-
 #avatar {
-    margin-top: 85px;
-    width: 100px;
-    height: 100px;
-    border-radius: 100%;
+    margin-top: 88px;
+    width: 105px;
+    height: 105px;
+    border-radius: 50%;
     border: 5px solid white;
 }
 
-#userprofile p strong {
-    margin-bottom: 10px;
+.user-profile {
+    margin-top: 25px;
+    width: 100%;
+    border-bottom: 1px solid #e8e8e8;
+    padding-bottom: 10px;
+    
+}
+
+#user-name {
+    color: hsl(229, 23%, 23%);
+    font-weight: 700;
+    font-size: 18px;
+    display: inline;
+    letter-spacing: 0px;
+    padding-right: 1px;
+}
+
+#user-age {
+    display: inline;
+    padding-left: 3px;
 }
 
 
-#location {
+#user-location {
     margin-top: 0;
-    padding-top: 0;
+    padding-top: 10px;
     font-size: .9rem;
 }
 
@@ -68,20 +81,25 @@ strong {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
-    width: 75%;
-    padding: 4px 0;
+    width: 84%;
+    margin-top: 10px;
+    padding-bottom: 15px;
+    justify-content: center;
+    align-items: center;
 }
 
-.stat-block p {
-    font-size: .6rem;
-    letter-spacing: 2px;
-}
-
-.stat-block p strong {
+.stats-number {
+    color: hsl(229, 23%, 23%);
+    font-weight: 700;
     font-size: 18px;
-    letter-spacing: normal;
+    margin: 17px 5px 7px 3px;
 }
 
+.stats-label {
+    font-size: .6rem;
+    letter-spacing: 1.7px;
+margin: 0;
+}
 
 /* Attribution*/
 .attribution {
@@ -89,6 +107,7 @@ strong {
     text-align: center;
     margin-top: 20px;
     color: white;
+    
 }
 
 .attribution a {
